nginx/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nginx.labngo`)
      priority: 10
      services:
        - name: nginx-svc
          port: 80
        - name: phpfpm-svc
          port: 9000
  tls:
    certResolver: default
